--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,12 @@ tr:hover,
 td:hover {
 	background: lightcyan;
 }
+input {
+	width: 100px;
+}
+.input {
+	width: 150px;
+}
+.hidden-td {
+	display: none;
+}
