--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,71 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
-#table-container {
-	max-width: 1600px;
+/*! spinner */
+#spinner {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	height: 100vh;
+	overflow: hidden;
+}
+.gegga {
+	width: 0;
+}
+.snurra {
+	filter: url(#gegga);
+}
+.stopp1 {
+	stop-color: #f700a8;
+}
+.stopp2 {
+	stop-color: #ff8000;
+}
+.halvan {
+	animation: Snurra1 10s infinite linear;
+	stroke-dasharray: 180 800;
+	fill: none;
+	stroke: url(#gradient);
+	stroke-width: 23;
+	stroke-linecap: round;
+}
+.strecken {
+	animation: Snurra1 3s infinite linear;
+	stroke-dasharray: 26 54;
+	fill: none;
+	stroke: url(#gradient);
+	stroke-width: 23;
+	stroke-linecap: round;
+}
+.skugga {
+	filter: blur(5px);
+	opacity: 0.3;
+	position: absolute;
+	transform: translate(3px, 3px);
+}
+@keyframes Snurra1 {
+	0% {
+		stroke-dashoffset: 0;
+	}
+	100% {
+		stroke-dashoffset: -403px;
+	}
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 1400px;
 	margin: 0 auto;
-	padding-top: 20px;
+	padding: 10px;
+	display: none;
+}
+
+.header {
+	margin-top: 10px;
 }
 td,
 th {
@@ -27,10 +86,41 @@ input {
 }
 .input {
 	width: 150px;
+	padding: 5px;
+	margin-right: 5px;
 }
 .hidden-td {
 	display: none;
 }
 button {
-	width: 50px;
+	width: 100px;
+	font-size: 1.1rem;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+}
+.edit-button {
+	background: lightgreen;
+}
+.delete-button {
+	background: red;
+}
+.cancel-button {
+	background: lightgrey;
+}
+.confirm-button {
+	background: lightskyblue;
+}
+.search {
+	display: flex;
+	align-items: center;
+	padding: 10px 0;
+}
+.category {
+	width: 100px;
+	padding: 5px;
+}
+.search span {
+	font-size: 30px;
+	margin-right: 5px;
 }
