--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,168 @@
 	box-sizing: border-box;
 	font-family: 'Roboto', sans-serif;
 }
+/*! Main */
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 1400px;
+	margin: 0 auto;
+	padding: 10px;
+	display: none;
+	position: relative;
+}
+#table-container {
+	border-collapse: collapse;
+}
+.main-header {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+.header {
+	margin-top: 10px;
+}
+td,
+th {
+	padding: 2px 10px;
+	text-align: left;
+}
+th {
+	cursor: pointer;
+}
+tr:hover {
+	background: lightslategray;
+	color: #fff;
+}
+td {
+	border: 1px solid #ddd;
+}
+input {
+	width: 100px;
+	font-size: 13px;
+}
+.input {
+	width: 150px;
+	padding: 5px;
+	margin-right: 5px;
+}
+.hidden-td {
+	display: none;
+}
+button {
+	width: 100px;
+	font-size: 1.1rem;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+.edit-button {
+	background: lightgreen;
+}
+.delete-button {
+	background: red;
+}
+.cancel-button {
+	background: lightgrey;
+}
+.confirm-button {
+	background: lightskyblue;
+}
+.search {
+	display: flex;
+	align-items: center;
+	padding: 10px 0;
+}
+.category {
+	width: 100px;
+	padding: 5px;
+}
+.search span {
+	font-size: 30px;
+	margin-right: 5px;
+}
+
+/*! dark mode */
+.theme-light {
+	--color-primary: #0060df;
+	--color-secondary: #fbfbfe;
+	--color-accent: #fd6f53;
+	--font-color: #000000;
+}
+.theme-dark {
+	--color-primary: #17ed90;
+	--color-secondary: #2a2c2d;
+	--color-accent: #12cdea;
+	--font-color: #ffffff;
+}
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 60px;
+	height: 34px;
+}
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: 0.4s;
+	transition: 0.4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: '';
+	height: 40px;
+	width: 40px;
+	left: 0px;
+	bottom: 4px;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+	-webkit-transition: 0.4s;
+	transition: 0.4s;
+	box-shadow: 0 0px 15px #2020203d;
+	background: white url('https://i.ibb.co/FxzBYR9/night.png');
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+input:checked + .slider {
+	background-color: #2196f3;
+}
+
+input:focus + .slider {
+	box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+	-webkit-transform: translateX(24px);
+	-ms-transform: translateX(24px);
+	transform: translateX(24px);
+	background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+/* Rounded sliders */
+.slider.round {
+	border-radius: 34px;
+}
+
+.slider.round:before {
+	border-radius: 50%;
+}
 /*! spinner */
 #spinner {
 	align-items: center;
@@ -53,74 +215,4 @@
 	100% {
 		stroke-dashoffset: -403px;
 	}
-}
-
-main {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	max-width: 1400px;
-	margin: 0 auto;
-	padding: 10px;
-	display: none;
-}
-
-.header {
-	margin-top: 10px;
-}
-td,
-th {
-	padding: 0 10px;
-	text-align: left;
-}
-th {
-	cursor: pointer;
-}
-tr:hover,
-td:hover {
-	background: lightcyan;
-}
-input {
-	width: 100px;
-	font-size: 13px;
-}
-.input {
-	width: 150px;
-	padding: 5px;
-	margin-right: 5px;
-}
-.hidden-td {
-	display: none;
-}
-button {
-	width: 100px;
-	font-size: 1.1rem;
-	outline: none;
-	border: none;
-	border-radius: 5px;
-}
-.edit-button {
-	background: lightgreen;
-}
-.delete-button {
-	background: red;
-}
-.cancel-button {
-	background: lightgrey;
-}
-.confirm-button {
-	background: lightskyblue;
-}
-.search {
-	display: flex;
-	align-items: center;
-	padding: 10px 0;
-}
-.category {
-	width: 100px;
-	padding: 5px;
-}
-.search span {
-	font-size: 30px;
-	margin-right: 5px;
 }
